# hal_infineon

./: .gitignore  CMakeLists.txt  License.txt  Readme.txt  patch.txt  versions.txt
.github/: CODEOWNERS  license_config.yml
XMCLib/: CMakeLists.txt
XMCLib/devices/XMC1400/Include/: XMC1000_RomFunctionTable.h
XMCLib/devices/XMC1400/Source/: system_XMC1400.c
XMCLib/devices/XMC1400/Source/ARM6/: XMC1400x0032.sct  XMC1400x0064.sct  XMC1400x0128.sct  XMC1400x0200.sct  startup_XMC1400.asm
XMCLib/devices/XMC4700/Source/: system_XMC4700.c
XMCLib/devices/XMC4800/Include/: XMC4800.h  system_XMC4800.h
XMCLib/devices/XMC4800/Source/: system_XMC4800.c
XMCLib/drivers/: CMakeLists.txt
XMCLib/drivers/src/: xmc_uart.c
abstraction-rtos/: RELEASE.md  props.json
bless/: cy_ble.c  cy_ble_common.c  cy_ble_controller.c  cy_ble_event_handler.c  cy_ble_hal_int.c  cy_ble_hal_pvt.c
core-lib/: RELEASE.md  props.json
mtb-dsl-pse8xxgp/: props.json  version.xml
mtb-hal-cat1/: README.md  RELEASE.md  props.json  version.xml
mtb-pdl-cat1/: .cyignore  EULA.txt  README.md  RELEASE.md  props.json  version.xml
mtb-pdl-cat2/: README.md  RELEASE.md  props.json  version.xml
mtb-srf/: README.md  RELEASE.md  props.json
mtb-template-cat1/: README.md  RELEASE.md  props.json
mtb-template-cat2/: README.md  RELEASE.md  props.json
mtb-template-pse8xxgp/: README.md  RELEASE.md  props.json
se-rt-services-utils/: README.md  RELEASE.md  ifx_se_config_template.h  ifx_se_crc32.c  ifx_se_crc32.h  ifx_se_fih.c  ifx_se_fih.h  ifx_se_memory.h  ifx_se_platform.c  ifx_se_platform.h  (+14 more)
(+4996 files in other folders)
